--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,13 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>6.9.7.1</version> <!-- Check Maven for the latest version -->
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
