--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>6.9.7.1</version> <!-- Check Maven for the latest version -->
+            <version>6.9.7.1</version>
         </dependency>
 
     </dependencies>
