--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=food-ordering-telegram-bot
+
+# Bot Configuration
+bot.username=food-ordering_bot
+bot.token=8527011881:AAET4urlm_N59DtzaL9gbtSXO-ce2y1gIts
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/food_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
